--- a/templates/header.html
+++ b/templates/header.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-  <h1>OpenAero</h1>
 
-  <p>OpenAero is currently being rebuild using Couchapp and Refuge. Not yet there ;) </p>
-
-  <div class="main">
-
+  <div id="page">
+    <h1>OpenAero</h1>
+  
+    <p>OpenAero is currently being rebuild using Couchapp and Refuge. Not yet there ;) </p>
+  
+    <div class="main">
+  
