--- a/templates/header.html
+++ b/templates/header.html
@@ -13,7 +13,14 @@
   <div id="page">
     <h1>OpenAero</h1>
   
-    <p>OpenAero is currently being rebuild using Couchapp and Refuge. Not yet there ;) </p>
+    <div class="announce">
+      <p>OpenAero is a catalog for any resources related to aviation, whatever it's a dataset, a software or manuals.</p>
+      <p>This project has been sleeping for far too long since 2005. It's related to the 
+         <a href="http://tldp.org/HOWTO/html_single/Aviation-HOWTO/">GNU/Linux Aviation HOWTO</a>.<p>
+      <br/>
+      <p>It's now being rebuilt using <a href="http://refuge.io">Refuge</a> and <a href="http://couchapp.org">Couchapp</a> to allow anybody to replicate the dataset and reformat it as it fits.</p>
+    </div>
   
     <div class="main">
+      <p>Here are a few examples that what kind of resources will be provided:<p>
   
