Adding a link to come back to the root

--- a/templates/header.html
+++ b/templates/header.html
@@ -11,7 +11,7 @@
 <body>
 
   <div id="page">
-    <h1>OpenAero</h1>
+    <h1><a href="/">OpenAero</a></h1>
   
     <div class="announce">
       <p>OpenAero is a catalog for any resources related to aviation, whatever it's a dataset, a software or manuals.</p>
