--- a/_attachments/style/main.css
+++ b/_attachments/style/main.css
@@ -14,13 +14,31 @@ div#page {
 }
 
 div.main {
-  padding: 5px;
+  padding: 10px;
+  margin-top: 10px;
+  margin-left: 5%;
+  margin-botton: 10px;
 }
 
 div.announce {
+  float: right;
   color: white;
   background-color: gray;
   padding: 10px;
+  width: 50%;
+}
+
+div.project_banner {
+  padding: 10px;
+  border-left: 1px gray solid;
+  border-bottom: 1px gray solid;
+  margin-top: 30px;
+}
+
+div.footer {
+  top-margin: 30px;
+  text-align: right;
+  font-variant: small-caps;
 }
 
 /*
