Update the copyright

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
     </div>
   
     <div class="footer">
-      Copyright &copy; Nicolas R Dufour 2011
+      Copyright &copy; Nicolas R Dufour 2005-2011
     </div>
   </div>
 </body>
