Add a basic logo ;)

--- a/templates/header.html
+++ b/templates/header.html
@@ -13,6 +13,8 @@
   <div id="page">
     <h1><a href="/">OpenAero</a></h1>
   
+    <img class="front_image" src="/images/forces_of_flight.jpg" />
+
     <div class="announce">
       <p>OpenAero is a catalog for any resources related to aviation, whatever it's a dataset, a software or manuals.</p>
       <p>This project has been sleeping for far too long since 2005. It's related to the 
