Templating the title

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-  <title>{{page_title}}</title>
+  <title>OpenAero ~ {{page_title}}</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="description" content="Opensource resources for Aviation" />
   <meta name="author" lang="en" content="Nicolas R Dufour" />
