--- a/templates/header.html
+++ b/templates/header.html
@@ -13,3 +13,6 @@
   <div id="page">
     <h1><a href="/">OpenAero</a></h1>
   
+    <div class="toolbar">
+      <a href="/">Home</a> <a href="/page/contact">Contact me</a>
+    </div>
