--- a/templates/header.html
+++ b/templates/header.html
@@ -14,5 +14,5 @@
     <h1><a href="/">OpenAero</a></h1>
   
     <div class="toolbar">
-      <a href="/">Home</a> <a href="/page/contact">Contact me</a>
+      <a href="/">Home</a> <a href="/page/about">About</a> <a href="/page/contact">Contact me</a>
     </div>
